<resources>
    <string name="app_name">Flowers Inventory App</string>
    <string name="detail_activity_add">Add new product</string>
    <string name="detail_activity_edit">Edit product</string>

    <string name="empty_state_text_view">No products found. Click Add Product from the Menu in the top right corner to begin.</string>

    <string name="button_add">Add</string>
    <string name="button_delete">Delete</string>

    <string name="product_name">Product Name:</string>
    <string name="quantity">Quantity:</string>
    <string name="price">Price (USD):</string>
    <string name="edit_text_name">Flowers</string>
    <string name="quantity_value">0</string>
    <string name="button_increase_by_one">+</string>
    <string name="button_decrease_by_one">-</string>
    <string name="button_increase_value">+</string>
    <string name="button_decrease_value">-</string>
    <string name="update_quantity">Update Quantity by:</string>
    <string name="edit_text_quantity">7</string>
    <string name="edit_price">0.00</string>
    <string name="button_choose_image">Select Image</string>
    <string name="button_order">Order from Supplier</string>
    <string name="supplier_email">supplier@suppliercompany.com</string>

    <string name="toast_invalid_name_addition">Please add a valid Name</string>
    <string name="toast_invalid_quantity_addition">Please add a valid Quantity</string>
    <string name="toast_invalid_price_addition">Please add a valid Price</string>
    <string name="toast_invalid_image_addition">Please add a valid Image</string>
    <string name="toast_invalid_quantity">Quantity cannot be less than zero</string>
    <string name="toast_missing_quantity">Please insert the missing quantity in the text field</string>
    <string name="toast_add_or_update_product_failed">Product was not saved/updated.</string>
    <string name="toast_add_product_successful">The new product was added successfully.</string>
    <string name="toast_update_product_successful">The new product was updated successfully.</string>
    <string name="toast_delete_product_successful">The product was deleted successfully.</string>
    <string name="toast_delete_product_failed">The product was not deleted.</string>
    <string name="toast_product_out_of_stock">The product is out of stock. Please order more!</string>

    <string name="option_delete">Delete</string>
    <string name="option_cancel">Cancel</string>
    <string name="option_delete_product">Are you sure that you want to delete this product?</string>
    <string name="option_yes">Yes</string>
    <string name="option_leave_without_saving">Do you want to leave without saving this product?</string>

    <string name="button_sale">sale</string>
    <string name="label_quantity">available in stock</string>
    <string name="label_price">USD</string>

</resources>
