<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9aff64"
    tools:context="com.example.android.inventoryapp.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="14dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="4dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/product_name"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_product_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/edit_text_name"
                android:inputType="textCapWords"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="4dp">

            <TextView
                android:id="@+id/quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quantity"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/quantity_final"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="38dp"
                android:layout_weight="1.3"
                android:text="@string/quantity_value"
                android:textSize="15sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/button_decrease_by_one"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginRight="40dp"
                android:text="@string/button_decrease_by_one" />

            <Button
                android:id="@+id/button_increase_by_one"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/button_increase_by_one" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="4dp">

            <TextView
                android:id="@+id/update_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/update_quantity"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_decrease_qty_by_many_units"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:text="@string/button_decrease_value" />

            <EditText
                android:id="@+id/edit_product_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/edit_text_quantity"
                android:inputType="number"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_increase_qty_by_many_units"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/button_increase_value" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="4dp">

            <TextView
                android:id="@+id/price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/price"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_weight="2"
                android:hint="@string/edit_price"
                android:inputType="numberDecimal"
                android:textSize="15sp"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="4dp">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8"
                android:adjustViewBounds="true"
                android:src="@drawable/flowers" />

            <Button
                android:id="@+id/button_choose_image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1.7"
                android:text="@string/button_choose_image"
                android:textAllCaps="true" />

        </LinearLayout>

        <Button
            android:id="@+id/button_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/button_order"
            android:textAllCaps="true" />

    </LinearLayout>

</ScrollView>